# autox

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTEXT.md  pyproject.toml
.github/workflows/: build-apk.yml
autox/: __init__.py  device.py  dump.py  elements.py  exceptions.py  image.py  keyboard.py  selector.py  selfcheck.py  treesource.py  watcher.py  xpath.py
docs/: u2-coverage.md
docs/adr/: 0001-no-uiautomator-accessibility-rpc-tree-source.md
scripts/: install-server.sh
server/: settings.gradle
server/app/: build.gradle
server/app/src/main/: AndroidManifest.xml
server/app/src/main/java/com/gitshrl/autox/: AutoxAccessibilityService.java  AutoxIME.java  HierarchyDumper.java  RpcServer.java
server/app/src/main/res/values/: strings.xml
server/app/src/main/res/xml/: accessibility_service_config.xml  method.xml
tests/: conftest.py  test_device.py  test_dropin.py  test_dump.py  test_elements.py  test_gesture.py  test_image.py  test_keyboard.py  test_selector.py  test_toast.py  test_treesource.py  test_uiobject.py  test_xpath.py
