[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autox"
version = "0.1.0"
description = "Client-side Android UI automation that works on Android 16 — a uiautomator2 replacement with no device-side server."
authors = [{ name = "gitshrl" }]
requires-python = ">=3.10"
dependencies = [
  "adbutils>=2.8.0,<3.0.0",
  "pillow",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.1,<9",
  "ruff",
]

[project.scripts]
autox-selfcheck = "autox.selfcheck:main"

[tool.hatch.build.targets.wheel]
packages = ["autox"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B"]
ignore = ["E501", "E741"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
